invalid_label_sym_sym_arg_keywords_test/invalid_label_sym_sym_arg_keywords_test_3.src
.IPPcode24
JUMPIFEQ label1 TF@b